--- a/furniture_Sales_Management/src/view/PDFTest.form
+++ b/furniture_Sales_Management/src/view/PDFTest.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
-<Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
+<Form version="1.5" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
   </Properties>
@@ -70,16 +70,16 @@
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
               <Table columnCount="4" rowCount="1">
-                <Column editable="true" title="Title 1" type="java.lang.Object">
+                <Column editable="false" title="Title 1" type="java.lang.Object">
                   <Data value="1"/>
                 </Column>
-                <Column editable="true" title="Title 2" type="java.lang.Object">
+                <Column editable="false" title="Title 2" type="java.lang.Object">
                   <Data value="2"/>
                 </Column>
-                <Column editable="true" title="Title 3" type="java.lang.Object">
+                <Column editable="false" title="Title 3" type="java.lang.Object">
                   <Data value="3"/>
                 </Column>
-                <Column editable="true" title="Title 4" type="java.lang.Object">
+                <Column editable="false" title="Title 4" type="java.lang.Object">
                   <Data value="4"/>
                 </Column>
               </Table>
