--- a/furniture_Sales_Management/src/view/PersonList.form
+++ b/furniture_Sales_Management/src/view/PersonList.form
@@ -63,9 +63,9 @@
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
               <Table columnCount="5" rowCount="1">
                 <Column editable="false" title="ID" type="java.lang.String"/>
-                <Column editable="true" title="Name" type="java.lang.String"/>
-                <Column editable="true" title="Email" type="java.lang.String"/>
-                <Column editable="true" title="Birth Date" type="java.lang.String"/>
+                <Column editable="false" title="Name" type="java.lang.String"/>
+                <Column editable="false" title="Email" type="java.lang.String"/>
+                <Column editable="false" title="Birth Date" type="java.lang.String"/>
                 <Column editable="true" title="Action" type="java.lang.Object"/>
               </Table>
             </Property>
