--- a/furniture_Sales_Management/src/view/PersonalSales.form
+++ b/furniture_Sales_Management/src/view/PersonalSales.form
@@ -78,12 +78,12 @@
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
               <Table columnCount="6" rowCount="4">
-                <Column editable="true" title="ORDER ID" type="java.lang.Object"/>
-                <Column editable="true" title="FURNITURE ID" type="java.lang.Object"/>
-                <Column editable="true" title="QUANTITY" type="java.lang.Object"/>
-                <Column editable="true" title="TOTAL" type="java.lang.Object"/>
-                <Column editable="true" title="CUSTOMER ID" type="java.lang.Object"/>
-                <Column editable="true" title="STATUS" type="java.lang.Object"/>
+                <Column editable="false" title="ORDER ID" type="java.lang.Object"/>
+                <Column editable="false" title="FURNITURE ID" type="java.lang.Object"/>
+                <Column editable="false" title="QUANTITY" type="java.lang.Object"/>
+                <Column editable="false" title="TOTAL" type="java.lang.Object"/>
+                <Column editable="false" title="CUSTOMER ID" type="java.lang.Object"/>
+                <Column editable="false" title="STATUS" type="java.lang.Object"/>
               </Table>
             </Property>
             <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
